# lmake_delete_old_js_snippets

./: Cargo.toml  README.md
pkg/snippets/mem5-77/js/: javascriptdofullscreen.js
src/: main.rs
