[package]
name = "lmake_delete_old_js_snippets"
version = "1.0.0"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description="After wasm-pacj build deletes the old js snippets"
repository = "https://github.com/LucianoBestia/lmake_delete_old_js_snippets"
readme = "README.md"
license = "MIT"
keywords = ["rust", "make"]
categories = ["compiling"]


[dependencies]
unwrap = "1.2.1"
clap = "2.33.0"
ansi_term = "0.12.1"
glob = "0.3.0"
chrono="0.4.9"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0"
filetime = "0.2.7"